# Universal_IR_Remote

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS.md.bak  CHANGELOG.md  CMakeLists.txt  COMMERCIAL_GRADE_FEATURES.md  INDIA_MARKET_COMPLIANCE.md  MEMORY_IMPACT_ANALYSIS.md  PARTITION_TABLES.md  PROJECT_SUMMARY.md  PROTOCOL_LIST.md  README.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v3.3.0.md  SPIFFS_USAGE.md  partitions.csv  partitions.csv.backup  partitions_16MB.csv  partitions_4MB.csv  partitions_8MB.csv  partitions_optimized.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.bak
.claude/: settings.local.json
components/ir_control/: CMakeLists.txt  COMPONENT_OVERVIEW.md  README.md  ir_ac_encoders.c  ir_ac_state.c  ir_action.c  ir_control.c  ir_protocols.c  ir_protocols.h  ir_timing.c  ir_timing.h
components/ir_control/decoders/: ir_apple.c  ir_apple.h  ir_bosewave.c  ir_bosewave.h  ir_carrier.c  ir_carrier.h  ir_daikin.c  ir_daikin.h  ir_denon.c  ir_denon.h  ir_distance_width.c  ir_distance_width.h  ir_fast.c  ir_fast.h  ir_fujitsu.c  ir_fujitsu.h  ir_haier.c  ir_haier.h  ir_hitachi.c  ir_hitachi.h  ir_jvc.c  ir_jvc.h  ir_lego.c  ir_lego.h  ir_lg.c  ir_lg.h  ir_magiquest.c  ir_magiquest.h  ir_midea.c  ir_midea.h  ir_mitsubishi.c  ir_mitsubishi.h  ir_panasonic.c  ir_panasonic.h  ir_rc5.c  ir_rc5.h  ir_rc6.c  ir_rc6.h  ir_samsung48.c  ir_samsung48.h  (+4 more)
components/ir_control/include/: ir_ac_state.h  ir_action.h  ir_control.h
components/rgb_led/: CMakeLists.txt  INSTALL.md  QUICK_REFERENCE.md  README.md  example_usage.c  led_strip_encoder.c  rgb_led.c
components/rgb_led/include/: led_strip_encoder.h  rgb_led.h
docs/: AC_STATE_ARCHITECTURE.md  HARDWARE_WIRING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IR_TRANSMITTER_OPTIMIZATION.md  PROTOCOL_COMPLIANCE_CHECKLIST.md  README.md
docs/developer/: DEVELOPER_GUIDE.md
docs/git/: GIT_USAGE.md
docs/hardware/: CIRCUIT_SCHEMATICS.md  HARDWARE_DESIGN_GUIDE.md  PCB_LAYOUT_GUIDE.md  README.md
docs/user/: USER_GUIDE.md
main/: CMakeLists.txt  app_config.h  app_main.c  app_wifi.c  app_wifi.h  idf_component.yml  rmaker_devices.c  rmaker_devices.h
