idf_component_register(SRCS "ir_control.c"
                            "ir_protocols.c"
                            "ir_timing.c"
                            "decoders/ir_distance_width.c"
                            "decoders/ir_sony.c"
                            "decoders/ir_jvc.c"
                            "decoders/ir_lg.c"
                            "decoders/ir_denon.c"
                            "decoders/ir_panasonic.c"
                            "decoders/ir_samsung48.c"
                            "decoders/ir_whynter.c"
                            "decoders/ir_lego.c"
                            "decoders/ir_magiquest.c"
                            "decoders/ir_bosewave.c"
                            "decoders/ir_fast.c"
                            "decoders/ir_apple.c"
                    INCLUDE_DIRS "include" "." "decoders"
                    REQUIRES driver esp_timer nvs_flash)
