idf_component_register(SRCS "ir_control.c"
                            "ir_protocols.c"
                            "ir_timing.c"
                            "decoders/ir_distance_width.c"
                            "decoders/ir_sony.c"
                            "decoders/ir_rc5.c"
                            "decoders/ir_rc6.c"
                            "decoders/ir_jvc.c"
                            "decoders/ir_lg.c"
                            "decoders/ir_denon.c"
                            "decoders/ir_panasonic.c"
                            "decoders/ir_samsung48.c"
                            "decoders/ir_mitsubishi.c"
                            "decoders/ir_daikin.c"
                            "decoders/ir_fujitsu.c"
                            "decoders/ir_haier.c"
                            "decoders/ir_midea.c"
                            "decoders/ir_carrier.c"
                            "decoders/ir_hitachi.c"
                            "decoders/ir_whynter.c"
                            "decoders/ir_lego.c"
                            "decoders/ir_magiquest.c"
                            "decoders/ir_bosewave.c"
                            "decoders/ir_fast.c"
                            "decoders/ir_apple.c"
                    INCLUDE_DIRS "include" "." "decoders"
                    REQUIRES driver esp_timer nvs_flash)
